# workout-api

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  database.py  dependencies.py
app/models/: training_plan.py  workout.py
app/routers/: workout.py
app/services/: health_service.py  training_plan_service.py  workout_service.py
application/: Dockerfile  pyproject.toml
application/src/: main.py
application/src/core/: config.py  database.py  dependencies.py  security.py
application/src/model/: auth.py  training_plan.py  workout.py  workout_session.py
application/src/models/: training_plan.py  workout.py
application/src/router/: auth.py  health.py  training_plan.py  workout.py  workout_session.py
application/src/routers/: health.py  training_plan.py  workout.py
application/src/service/: health_service.py  training_plan_service.py  workout_service.py  workout_session_service.py
application/src/services/: workout_service.py
collection/: opencollection.yml
collection/workout-api/: check-health.yml
infrastructure/: compose.yaml
seeds/: data.py  seed.py
src/app/: main.py
src/app/core/: database.py  dependencies.py  security.py
src/app/routers/: health.py
test/: folder.yml
test/collection/: opencollection.yml
test/collection/auth/: login.yml  registrate.yml
test/collection/health/: check.yml  folder.yml
test/collection/training-plans/: create.yml  delete.yml  folder.yml  get.yml  list.yml  update.yml
test/seeds/: data.py  seed.py
(+9 files in other folders)
